testsuite/tests/lexical_envs/invalid_subunit_root/non_root_list.lkt
import lexer_example

grammar foo_grammar {
    @main_rule main_rule <- list+(Subunit("example" main_rule))
}
